adicionei um texto novo ao html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Agua de lontra morta é muito boa!</h1>
+    <h1>Agua de lontra morta é muito boa! Porem a de foca é aura pura</h1>
 </body>
 </html>
