Adicionei um pequeno pargrafo ao meu html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Agua de lontra morta é muito boa! Porem a de foca é aura pura</h1>
+    <p>Olha como elas brilham e além de baratas são deliciosas!</p>
 </body>
 </html>
